@@ -6,6 +6,33 @@
     4.垃圾回收器
     5.垃圾回收调优
 
+*JVM GC过程：*
+
+1.**先判断可以回收的对象**
+
+    没有被GC ROOT直接或间接引用的对象可以被回收
+
+2.**JVM将虚拟机栈分为 新生代Young Gen，老年代Old Gen**
+
+    其中新生代又分为 S0,S1,E区
+
+3.**new出来的对象出生在E区，当E区被填满时触发Minor GC**
+
+    Minor GC使用复制算法，E区不被标记的对象复制到S0区，然后将E区与S1区剩下的对象全部删除，下一次触发Minor GC时，E区与S0区的对象重复上述复制操作到S1区，如此循环往复使得S0与S1区交替使用
+        优点：比直接把栈内存分两块复制利用率高
+        S0,S1,E的大小比默认为 1:1:8
+
+4.**如果对象在一次Minor GC中存活，则年龄+1。当年龄=15时，对象会被复制到Old区**
+
+*大对象（如一个长度为几万的int数组）也会被直接存放在Old区*
+
+5.**当Old区满时，触发Full GC**
+
+    触发Old GC的同时一般会伴随着Minor GC
+    触发Full GC时，整个Java程序将会暂停到GC结束
+    主要使用 标记清除 或 标记整理 
+
+
 ## 1.如何判断对象可以回收
 
 ### 1.1 引用计数法（Python使用）
@@ -127,6 +154,44 @@
     缺点：占用双倍内存空间
 
 ## 3.分代垃圾回收
+
+JVM将堆内存分为 *新生代Young Generation* 和 *老年代Old Generation*
+
+其中，新生代又进一步分为 *E区 - 伊甸园* 、*From(S0)区* 、*To(S1)区*，S0与S1区都是幸存区
+
+    对象首先分配在E区。
+    新生代空间不足时，触发Minor GC（复制算法）；
+    老年代空间不足时，触发Full GC（标记清除/标记整理）。
+
+**Minor GC引发 stop the world，暂停其他用户的线程；**
+
+    Minor GC暂停时间较短。
+
+当对象寿命超过阈值时，会晋升至老年代，最大寿命是15(4bit,1111)
+
+当老年代空间不足时，会先触发Minor GC，若空间仍然不足，则会触发Full GC
+
+**Full GC引发 stop the world，整个Java程序都将暂停。**
+
+    Full GC暂停时间较长。
+
+如果Full GC过后，老年代空间仍然不够，则抛出*堆内存溢出*错误：
+
+    java.lang.OutOfMemoryError: Java heap space
+
+### 3.1 GC相关JVM参数
+
+|含义|参数|
+|------|------|
+|堆初始大小|-Xms|
+|堆最大大小|-Xmx 或 -XX:MaxHeapSize=size|
+|新生代大小|-Xmn 或(-XX:NewSize=size + -XX:MaxNewSize=size)|
+|幸存区比例(动态)|-XX:InitialSurvivorRatio=ratio 和 -XX:+UseAdaptiveSizePolicy|
+|幸存区比例|-XX:SurvivorRatio=ratio|
+|晋升阈值|-XX:MaxTenuringThreshold=threshold|
+|晋升详情|-XX:+PrintTenuringDistribution|
+|GC详情|-XX:+PrintGCDetails -verbose:GC|
+|Full GC前Minor GC|-XX:+ScavengeBeforeFullGC|
 
 ## 4.垃圾回收器
 
